infrastructure/jenkins/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: jenkins
  labels:
    name: jenkins
    app.kubernetes.io/managed-by: argocd
