infrastructure/jenkins/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1beta1
kind: HTTPRoute
metadata:
  name: jenkins-httproute
  namespace: jenkins
spec:
  parentRefs:
  - name: internal-gateway
    namespace: envoy-gateway
    sectionName: http
  hostnames:
  - "localhost"
  rules:
  - matches:
    - path:
        type: PathPrefix
        value: /jenkins
    backendRefs:
    - name: jenkins
      port: 8080
      weight: 1
